--- a/WeatherForecast/MainPage.xaml
+++ b/WeatherForecast/MainPage.xaml
@@ -7,25 +7,27 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Margin="50,50,50,50" Background="LightBlue">
+    <StackPanel  Background="LightBlue" ScrollViewer.VerticalScrollBarVisibility="Visible">
         <!--<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">-->
         <Grid Background="LightBlue">
             <StackPanel>
-                
+                <TextBlock x:Name="titleBar"  Text="Weather Forecast" Foreground="MidnightBlue"  Margin="5,0,5,0" FontSize="20" HorizontalAlignment="Center"></TextBlock>
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
                     <TextBox x:Name="cityInput" Width="500" Height="100" Header="Choose City" PlaceholderText="Enter City here.."  HorizontalAlignment="Center" Text="{Binding userCity}"/>
-                    <Button x:Name="cityButton" Tapped="cityButton_Tapped" HorizontalAlignment="Center" Background="DeepSkyBlue" BorderBrush="MidnightBlue">Search for city</Button>
+                    <Button x:Name="cityButton" Margin="0,5,0,0" Tapped="cityButton_Tapped" HorizontalAlignment="Center" Background="DeepSkyBlue" BorderBrush="MidnightBlue">Search for city</Button>
                     <TextBlock x:Name="errorBox" Visibility="Collapsed" Text="Please enter a city name" Foreground="Red" ></TextBlock>
                 </StackPanel>
                 
                 <StackPanel>
-                    <Button x:Name="getLocation" Width="200" Height="100" Tapped="getLocation_Tapped" Background="DeepSkyBlue" BorderBrush="MidnightBlue" HorizontalAlignment="Center" Margin="0,50,0,0">Get Your Current Location</Button>
+                    <Button x:Name="getLocation" Width="200" Height="35" Tapped="getLocation_Tapped" Background="DeepSkyBlue" BorderBrush="MidnightBlue" HorizontalAlignment="Center" Margin="0,50,0,0">Get Your Current Location</Button>
                     <TextBlock x:Name="userLocation" Visibility="Collapsed"  Foreground="Blue" HorizontalAlignment="Center" ></TextBlock>
-                    <Button x:Name="getLocForecast" Width="200" Height="100" Visibility="Collapsed" Click="getLocForecast_Click" Background="DeepSkyBlue" BorderBrush="MidnightBlue" HorizontalAlignment="Center" Margin="0,50,0,0">
+                    <Button x:Name="getLocForecast" Width="200" Height="50" Visibility="Collapsed" Click="getLocForecast_Click" Background="DeepSkyBlue" BorderBrush="MidnightBlue" HorizontalAlignment="Center" Margin="0,50,0,0">
                         <TextBlock Text="Get the Forecast for your current location"  TextWrapping="Wrap" TextAlignment="Center"/>
                     </Button>
                 </StackPanel>
-                
+                <StackPanel>
+                    <TextBlock x:Name="prevSearch" HorizontalAlignment="Center" Visibility="{Binding VisibilityPropertyA}" Text="Previous Search" Height="324" Margin="0,20,0,0" ></TextBlock>
+                </StackPanel>
             </StackPanel>
         </Grid>
     </StackPanel>
