--- a/WeatherForecast/WeatherPage.xaml
+++ b/WeatherForecast/WeatherPage.xaml
@@ -9,36 +9,49 @@
     <Page.Resources>
         <DataTemplate x:Name="ListViewDataTemplate"  >
 
-            <StackPanel BorderBrush="Black" BorderThickness="2" Margin="2" HorizontalAlignment="Center" Width="500"  Background="DeepSkyBlue">
-                <Image Source="{Binding icon}" Stretch="Fill" Height="100" Width="150"></Image>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
+                <Grid BorderBrush="Black" BorderThickness="2" Margin="2" HorizontalAlignment="Center" Background="DeepSkyBlue" Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Image Source="{Binding icon}" Stretch="Fill" Height="100" Width="150" Margin="20" Grid.Column="1"/>
 
-                <StackPanel Orientation="Horizontal"  >
-                    <TextBlock HorizontalAlignment="Stretch" FontWeight="Bold" Text="Temperature: " ></TextBlock>
-                    <TextBlock  HorizontalAlignment="Stretch" Text="{Binding temp}"></TextBlock>
+                    <StackPanel VerticalAlignment="Center">
+                      
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Time : " FontWeight="Bold"></TextBlock>
+                            <TextBlock Text="{Binding dtime}"></TextBlock>
+                        </StackPanel>
+                      
+                        <StackPanel Orientation="Horizontal"  >
+                            <TextBlock HorizontalAlignment="Stretch" FontWeight="Bold" Text="Temperature: " ></TextBlock>
+                            <TextBlock  HorizontalAlignment="Stretch" Text="{Binding temp}"></TextBlock>
+                        </StackPanel>
 
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock  Text="Description : " FontWeight="Bold"></TextBlock>
+                            <TextBlock Text="{Binding desc}"></TextBlock>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Time : " FontWeight="Bold"></TextBlock>
-                    <TextBlock Text="{Binding dtime}"></TextBlock>
-                </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Humidity : " FontWeight="Bold"></TextBlock>
+                            <TextBlock Text="{Binding humidity}"></TextBlock>
+                        </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Description : " FontWeight="Bold"></TextBlock>
-                    <TextBlock Text="{Binding desc}"></TextBlock>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Humidity : " FontWeight="Bold"></TextBlock>
-                    <TextBlock Text="{Binding humidity}"></TextBlock>
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Windspeed : " FontWeight="Bold"></TextBlock>
-                    <TextBlock Text="{Binding windSpeed}"></TextBlock>
-                </StackPanel>
-
-            </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Windspeed : " FontWeight="Bold"></TextBlock>
+                            <TextBlock Text="{Binding windSpeed}"></TextBlock>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Grid>
 
         </DataTemplate>
     </Page.Resources>
@@ -47,70 +60,9 @@
         <TextBlock x:Name="cityBox" HorizontalAlignment="Center" FontSize="50"  ></TextBlock>
         <Button
             x:Name="ReturnToMain" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10" BorderThickness="1,1,1,1" FontSize="48" Background="#33B40C0C" BorderBrush="#FFF50B0B" FontFamily="Bauhaus 93" FontWeight="Bold" AutomationProperties.HelpText="Click to return to main" Click="ReturnToMain_Click" >Return To Main</Button>
-        <Pivot x:Name="pvtWeather"  Margin="100,100,100,100" Height="500" Background="LightBlue"  Foreground="LightPink"     >
+        <Pivot x:Name="pvtWeather"  HorizontalContentAlignment="Center" Margin="100,100,100,100" Height="500" Background="LightBlue"  Foreground="LightPink"     >
 
         </Pivot>
-        <!-- Plan for new pivot-->
-        <!--
-            <Pivot x:Name="Pivot1" ItemsSource="{x:Bind daylists}">
-            <Pivot.HeaderTemplate>
-                <DataTemplate x:DataType="local:Daylist">
-                    <TextBlock Text="{x:Bind Day}" />
-                </DataTemplate>
-            </Pivot.HeaderTemplate>
-            <Pivot.ItemTemplate>
-                <DataTemplate x:DataType="local:Daylist">
-                    <ScrollViewer>
-                        <ListView ItemsSource="{x:Bind Temperatures}">
-                            <ListView.ItemTemplate>
-                                <DataTemplate x:DataType="local:TimeTemperature">
-                                    <Grid Margin="20">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition />
-                                            <RowDefinition />
-                                            <RowDefinition />
-                                            <RowDefinition />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition />
-                                            <ColumnDefinition />
-                                        </Grid.ColumnDefinitions>
-                                        <TextBlock
-                                    Grid.Row="0"
-                                    Grid.ColumnSpan="2"
-                                    Text="{x:Bind currenttime}" />
-                                        <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Text="winSpeed:" />
-                                        <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    Text="{x:Bind winSpeed}" />
-                                        <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="0"
-                                    Text="humidity:" />
-                                        <TextBlock
-                                    Grid.Row="2"
-                                    Grid.Column="1"
-                                    Text="{x:Bind humidity}" />
-                                        <TextBlock
-                                    Grid.Row="3"
-                                    Grid.Column="0"
-                                    Text="temperature:" />
-                                        <TextBlock
-                                    Grid.Row="3"
-                                    Grid.Column="1"
-                                    Text="{x:Bind temperature}" />
-                                    </Grid>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </ScrollViewer>
-                </DataTemplate>
-            </Pivot.ItemTemplate>
-        </Pivot>
--->
+      
     </Grid>
 </Page>
